# Enterprise-FastAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_create_auth_users.py  03713aba5cbd_add_house_address_column_to_auth_users.py  20a066e8df24_drop_auth_users_table.py  618372d12079_drop_auth_users_table.py  80a2e256675b_drop_auth_users_table.py  93c37ec9be91_alter_auth_userd_table.py  d20fb0d63b00_alter_auth_user_table.py  e56c619c6bda_add_role_to_auth_users.py
app/: main.py
app/api/v1/controllers/: auth_controller.py  user_controller.py
app/api/v1/routers/: auth.py  auth_router.py  health_router.py  user_router.py  users.py
app/cache/: __init__.py
app/core/: config.py  errors.py  logging.py  rate_limiter.py  security.py
app/db/: mixins.py  session.py
app/mediators/: auth_mediator.py  user_mediator.py
app/message_broker/: __init__.py
app/middleware/: rate_limit.py  request_id.py
app/models/: __init__.py  auth_user.py  user.py
app/repositories/: auth_user_repository.py  user_repository.py
app/schemas/: auth.py  user.py  user_schema.py
app/services/: auth_service.py  user_service.py
app/workers/: email_sender.py
tests/: conftest.py  test_auth.py  test_cache.py  test_health.py  test_rate_limiter.py  test_users.py
